--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/mulish": "^5.0.6",
+    "@fontsource-variable/playfair-display": "^5.0.6",
     "sass": "^1.63.6",
     "vue": "^3.2.47"
   },
