--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/playfair-display": "^5.0.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "sass": "^1.63.6",
     "vue": "^3.2.47"
